--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mvp-ser</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header-inner">
+                <a href="#" class="header-inner__logo">
+                    <img src="images/logo.svg" alt="logo" class="header-logo__link">
+                </a>
+                <div class="header-inner__btns">
+                    <a href="#" class="header-inner__btn-item header-inner__btn-itemWA">WhatsApp</a>
+                    <a href="#" class="header-inner__btn-item header-inner__btn-itemVK">VK</a>
+                    <div class="header-inner__btn-profileInner">
+                        <div class="header-inner__btn-profile"></div>
+                        <ul class="header-inner__btn-profileMenu">
+                            <li class="profileMenu__item">
+                                <a href="#" class="profileMenu__item-text">Мои заказы</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main class="main">
+        <section class="top-slider">
+                <div class="top-slider__inner">
+                    <div class="top-slider__item">
+                        <div class="top-slider__content">
+                            <h3 class="top-slider__title">Доставка<br> по все России</h3>
+                            <a href="#" class="top-slider__link">Подробнее узнать о нас</a>
+                        </div>
+                    </div>
+                    <div class="top-slider__item">
+                        <div class="top-slider__content">
+                            <h3 class="top-slider__title">Доставка<br> по все России</h3>
+                            <a href="#" class="top-slider__link">Подробнее узнать о нас</a>
+                        </div>
+                    </div>
+                    <div class="top-slider__item">
+                        <div class="top-slider__content">
+                            <h3 class="top-slider__title">Доставка<br> по все России</h3>
+                            <a href="#" class="top-slider__link">Подробнее узнать о нас</a>
+                        </div>
+                    </div>
+                    <div class="top-slider__item">
+                        <div class="top-slider__content">
+                            <h3 class="top-slider__title">Доставка<br> по все России</h3>
+                            <a href="#" class="top-slider__link">Подробнее узнать о нас</a>
+                        </div>
+                    </div>
+                    <div class="top-slider__item">
+                        <div class="top-slider__content">
+                            <h3 class="top-slider__title">Доставка<br> по все России</h3>
+                            <a href="#" class="top-slider__link">Подробнее узнать о нас</a>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
+
+    <script src="js/main.min.js"></script>
 </body>
 </html>
