--- a/app/product.html
+++ b/app/product.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mvp-ser</title>
-    <link rel="stylesheet" href="css/index.min.css">
+    <link rel="stylesheet" href="css/product.min.css">
 </head>
 
 <body>
@@ -31,142 +31,50 @@
         </div>
     </div>
 </header>
-    <main class="main">
-        <section class="top-slider">
-            <div class="top-slider__inner">
-                <div class="top-slider__item">
-                    <div class="top-slider__content">
-                        <h1 class="top-slider__title">Доставка<br> по все России</h1>
-                        <a hrefproduct.html"#" class="top-slider__link">Подробнее узнать о нас</a>
-                    </div>
-                </div>
-                <div class="top-slider__item">
-                    <div class="top-slider__content">
-                        <h1 class="top-slider__title">Доставка<br> по все России</h1>
-                        <a hrefproduct.html"#" class="top-slider__link">Подробнее узнать о нас</a>
-                    </div>
-                </div>
-                <div class="top-slider__item">
-                    <div class="top-slider__content">
-                        <h1 class="top-slider__title">Доставка<br> по все России</h1>
-                        <a hrefproduct.html"#" class="top-slider__link">Подробнее узнать о нас</a>
-                    </div>
-                </div>
-                <div class="top-slider__item">
-                    <div class="top-slider__content">
-                        <h1 class="top-slider__title">Доставка<br> по все России</h1>
-                        <a hrefproduct.html"#" class="top-slider__link">Подробнее узнать о нас</a>
-                    </div>
-                </div>
-                <div class="top-slider__item">
-                    <div class="top-slider__content">
-                        <h1 class="top-slider__title">Доставка<br> по все России</h1>
-                        <a hrefproduct.html"#" class="top-slider__link">Подробнее узнать о нас</a>
-                    </div>
-                </div>
-            </div>
-        </section>
 
-        <section class="category">
+    <main class="main">
+        <div class="details">
             <div class="container">
-                <div class="category__inner">
-                    <h3 class="category__inner-title">Категории</h3>
-                    <div class="category-top">
-                        <a class="category-top__item category-top__item--active" href="#tag-1">Винилуритан</a>
-                        <a class="category-top__item" href="#tag-2">Велюр</a>
-                        <a class="category-top__item" href="#tag-3">Плюш</a>
-                        <a class="category-top__item" href="#tag-4">Полиэстер</a>
-                        <a class="category-top__item" href="#tag-5">Твид</a>
-                        <a class="category-top__item" href="#tag-6">Жаккард</a>
-                    </div>
-                    <div class="category-content">
-                        <div class="category-content__item category-content__item--active" id="tag-1">
-                            <h2 class="category-content-title category__title">Винилуритан</h2>
-                            <div class="product">
-                                <div class="product-item">
-                                    <img src="images/product/1.jpg" alt="картинка товара" class="product-item__img">
-                                    <div class="product-item__inner">
-                                        <h4 class="product-item__title">Винилуритан 2 -TP обивочная пористо-моналитная,
-                                            сорт 1</h4>
-                                        <div class="product-item__price">430 ₽</div>
-                                        <div class="product-item__sub-text">Прежде всего, сплочённость команды
-                                            профессионалов влечет за собой процесс внедрения и модернизации
-                                            кластеризации усилий.</div>
-                                        <a href="product.html" class="product-item__link">Выбрать</a>
+                <div class="details-top">
+                    <a class="details-top__link" href="index.html">
+                        <img src="images/icon/line.svg" alt="назад">
+                    </a>
+                    <h2 class="details-top__title">Детали товара</h2>
+                </div>
+                <div class="detail-box">
+                    <img src="images/product/detail/1.jpg" alt="картинка товара" class="detail-box__img">
+                    <div class="detail-box__content">
+                        <h1 class="detail-box__content-title">Винилуритан -TP обивочная пористо-моналитная, сорт 1</h1>
+                        <div class="detail-box__content-price">430₽</div>
+                        <div class="detail-box__content-text">Прежде всего, сплочённость команды профессионалов влечет за собой процесс внедрения и модернизации кластеризации усилий. Мы вынуждены отталкиваться от того, что начало повседневной работы по формированию позиции не оставляет шанса для переосмысления внешнеэкономических политик. Таким образом, сложившаяся структура организации говорит о возможностях благоприятных перспектив.</div>
+                        <h3 class="detail-box__content-titleForm">Размер:</h3>
+                            <form action="#" class="detail-box__content-form">
+                                <label class="detail-box__content-label">
+                                    <span class="detail-box__content-span">Взять 5м</span>
+                                    <div class="detail-box__content-box">
+                                        <span class="detail-box__content-span">430₽</span>
+                                        <input class="detail-box__content-input" type="radio" name="size">
+                                        <span class="detail-box__content-checkbox"></span>
                                     </div>
-                                </div>
-                                <div class="product-item">
-                                    <img src="images/product/3.jpg" alt="картинка товара" class="product-item__img">
-                                    <div class="product-item__inner">
-                                        <h4 class="product-item__title">Винилуритан 2 -TP обивочная пористо-моналитная,
-                                            сорт 3</h4>
-                                        <div class="product-item__price">430 ₽</div>
-                                        <div class="product-item__sub-text">Прежде всего, сплочённость команды
-                                            профессионалов влечет за собой процесс внедрения и модернизации
-                                            кластеризации усилий.</div>
-                                        <a href="product.html" class="product-item__link">Выбрать</a>
+                                </label>
+                                <label class="detail-box__content-label">
+                                    <span class="detail-box__content-span">Взять 5м</span>
+                                    <div class="detail-box__content-box">
+                                        <span class="detail-box__content-span">430₽</span>
+                                        <input class="detail-box__content-input" type="radio" name="size">
+                                        <span class="detail-box__content-checkbox"></span>
                                     </div>
-                                </div>
-                                <div class="product-item">
-                                    <img src="images/product/2.jpg" alt="картинка товара" class="product-item__img">
-                                    <div class="product-item__inner">
-                                        <h4 class="product-item__title">Винилуритан 2 -TP обивочная пористо-моналитная,
-                                            сорт 2</h4>
-                                        <div class="product-item__price">430 ₽</div>
-                                        <div class="product-item__sub-text">Прежде всего, сплочённость команды
-                                            профессионалов влечет за собой процесс внедрения и модернизации
-                                            кластеризации усилий.</div>
-                                        <a href="product.html" class="product-item__link">Выбрать</a>
-                                    </div>
-                                </div>
-                                <div class="product-item">
-                                    <img src="images/product/3.jpg" alt="картинка товара" class="product-item__img">
-                                    <div class="product-item__inner">
-                                        <h4 class="product-item__title">Винилуритан 2 -TP обивочная пористо-моналитная,
-                                            сорт 3</h4>
-                                        <div class="product-item__price">430 ₽</div>
-                                        <div class="product-item__sub-text">Прежде всего, сплочённость команды
-                                            профессионалов влечет за собой процесс внедрения и модернизации
-                                            кластеризации усилий.</div>
-                                        <a href="product.html" class="product-item__link">Выбрать</a>
-                                    </div>
-                                </div>
-                                <div class="product-item">
-                                    <img src="images/product/2.jpg" alt="картинка товара" class="product-item__img">
-                                    <div class="product-item__inner">
-                                        <h4 class="product-item__title">Винилуритан 2 -TP обивочная пористо-моналитная,
-                                            сорт 2</h4>
-                                        <div class="product-item__price">430 ₽</div>
-                                        <div class="product-item__sub-text">Прежде всего, сплочённость команды
-                                            профессионалов влечет за собой процесс внедрения и модернизации
-                                            кластеризации усилий.</div>
-                                        <a href="product.html" class="product-item__link">Выбрать</a>
-                                    </div>
-                                </div>
-                                <div class="product-item">
-                                    <img src="images/product/1.jpg" alt="картинка товара" class="product-item__img">
-                                    <div class="product-item__inner">
-                                        <h4 class="product-item__title">Винилуритан 2 -TP обивочная пористо-моналитная,
-                                            сорт 1</h4>
-                                        <div class="product-item__price">430 ₽</div>
-                                        <div class="product-item__sub-text">Прежде всего, сплочённость команды
-                                            профессионалов влечет за собой процесс внедрения и модернизации
-                                            кластеризации усилий.</div>
-                                        <a href="product.html" class="product-item__link">Выбрать</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="category-content__item" id="tag-2">Content 2</div>
-                        <div class="category-content__item" id="tag-3">Content 3</div>
-                        <div class="category-content__item" id="tag-4">Content 4</div>
-                        <div class="category-content__item" id="tag-5">Content 5</div>
-                        <div class="category-content__item" id="tag-6">Content 6</div>
+                                </label>
+                                <button class="detail-box__content-btn">Заказать  430₽</button>
+                            </form>
+                        </h3>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
+
+
     <footer class="footer">
     <div class="container">
         <div class="footer-items">
@@ -253,7 +161,6 @@
         </div>
     </div>
 </footer>
-
 
     <script src="js/main.min.js"></script>
 </body>
