--- a/app/module/_script/_script.html
+++ b/app/module/_script/_script.html
@@ -13,7 +13,7 @@
                 productSize: 'product__size-element',
 
                 productQuantityWrapper: 'product__quantity',
-                smartBasketMinArea: 'profileMenu__item-text',
+                smartBasketMinArea: 'profileMenu__item-bask',
                 countryCode: '+7',
                 smartBasketCurrency: '₽',
                 smartBasketMinIconPath: '',
