--- a/app/product.html
+++ b/app/product.html
@@ -23,7 +23,13 @@
                     <div class="header-inner__btn-profile"></div>
                     <ul class="header-inner__btn-profileMenu">
                         <li class="profileMenu__item">
-                            <a href="#" class="profileMenu__item-text">Мои заказы</a>
+                            <a href="#" class="profileMenu__item-text profileMenu__item-text--bask profileMenu__item-bask">Мои заказы</a>
+                        </li>
+                        <li class="profileMenu__item">
+                            <a href="#" class="profileMenu__item-text profileMenu__item-text--wa">WhatsApp</a>
+                        </li>
+                        <li class="profileMenu__item">
+                            <a href="#" class="profileMenu__item-text profileMenu__item-text--vk">VK</a>
                         </li>
                     </ul>
                 </div>
@@ -183,7 +189,7 @@
                 productSize: 'product__size-element',
 
                 productQuantityWrapper: 'product__quantity',
-                smartBasketMinArea: 'profileMenu__item-text',
+                smartBasketMinArea: 'profileMenu__item-bask',
                 countryCode: '+7',
                 smartBasketCurrency: '₽',
                 smartBasketMinIconPath: '',
