--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,13 @@
                     <div class="header-inner__btn-profile"></div>
                     <ul class="header-inner__btn-profileMenu">
                         <li class="profileMenu__item">
-                            <a href="#" class="profileMenu__item-text">Мои заказы</a>
+                            <a href="#" class="profileMenu__item-text profileMenu__item-text--bask profileMenu__item-bask">Мои заказы</a>
+                        </li>
+                        <li class="profileMenu__item">
+                            <a href="#" class="profileMenu__item-text profileMenu__item-text--wa">WhatsApp</a>
+                        </li>
+                        <li class="profileMenu__item">
+                            <a href="#" class="profileMenu__item-text profileMenu__item-text--vk">VK</a>
                         </li>
                     </ul>
                 </div>
@@ -31,8 +37,8 @@
         </div>
     </div>
 </header>
-    <main class="main">
-        <section class="top-slider">
+     <main class="main">
+        <section class="top-slider"> 
             <div class="top-slider__inner">
                 <div class="top-slider__item">
                     <div class="top-slider__content">
@@ -254,7 +260,6 @@
     </div>
 </footer>
 
-
     <script src="js/main.min.js"></script>
     <link rel="stylesheet" href="smartbasket/css/smartbasket.min.css">
 
@@ -271,7 +276,7 @@
                 productSize: 'product__size-element',
 
                 productQuantityWrapper: 'product__quantity',
-                smartBasketMinArea: 'profileMenu__item-text',
+                smartBasketMinArea: 'profileMenu__item-bask',
                 countryCode: '+7',
                 smartBasketCurrency: '₽',
                 smartBasketMinIconPath: '',
