--- a/app/module/_header/_header.html
+++ b/app/module/_header/_header.html
@@ -11,7 +11,13 @@
                     <div class="header-inner__btn-profile"></div>
                     <ul class="header-inner__btn-profileMenu">
                         <li class="profileMenu__item">
-                            <a href="#" class="profileMenu__item-text">Мои заказы</a>
+                            <a href="#" class="profileMenu__item-text profileMenu__item-text--bask profileMenu__item-bask">Мои заказы</a>
+                        </li>
+                        <li class="profileMenu__item">
+                            <a href="#" class="profileMenu__item-text profileMenu__item-text--wa">WhatsApp</a>
+                        </li>
+                        <li class="profileMenu__item">
+                            <a href="#" class="profileMenu__item-text profileMenu__item-text--vk">VK</a>
                         </li>
                     </ul>
                 </div>
